@@ -5,6 +5,10 @@ Wed Oct  3 16:54:03 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 	IllegalArgumentException if edge is outer.  Caller must call this
 	method on symmetric edge instead, but this is not done automatically
 	because caller could be confused by collapse() return value.
+	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
+	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (canCollapse):
+	In order to be consistent with the change just above, returns false
+	if edge is outer.
 
 Tue Oct  2 10:53:17 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
